-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.6.0
-
None
-
3
-
13937
Comments from Andreas
"I noticed that ".lustre" now appears in "ls -a" output, but I don't think that is supposed to happen. It might have been added when .lustre was created as a real inode in 2.4 or so?
This causes a problem because backup and other filesystem scanning tools will want to go into .lustre and read all the files there, and may also want to restore them after a crash, which could cause problems.
I think readdir needs to be fixed to not include the .lustre directory in readdir output. "
- is related to
-
LU-5955 llapi_semantic_traverse() and lfs find skip any child directory named .lustre
-
- Resolved
-