LU-5044 llite: .lustre should not be return by readdir

Skip .lustre in readdir, otherwise some of backup or
filesystem scanning tools might go into .lustre and
read all files under .lustre, which could cause problems.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I4339403f74f7981f3ff8d4496d6e6c5cc499ea60